Fix sidescrolling on mobile

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,8 +1,9 @@
 html, body {
     margin: 0;
     padding: 0;
-    background-color: #262626;
+    overflow-x: hidden;
 
+    background-color: #262626;
     font-family: "Noto Sans", sans-serif !important;
 }
 
